// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TinyMCE Controls Modal modal is opened and view is circle 1`] = `
<Modal
  className="component_web_stories_mce_model"
  closeButtonLabel="Close"
  onRequestClose={[Function]}
  shouldCloseOnClickOutside={false}
  title="Web Stories"
>
  <Select
    label="Select View Type"
    onChange={[Function]}
    options={Array []}
  />
  <TinyMCEToggle
    field="title"
  />
  <TinyMCEToggle
    field="excerpt"
  />
  <TinyMCEToggle
    field="author"
  />
  <TinyMCEToggle
    field="date"
  />
  <TinyMCEToggle
    field="image_align"
  />
  <TinyMCEToggle
    field="archive_link"
  />
  <Range
    label="Number of Stories"
    max={20}
    min={1}
    onChange={[Function]}
  />
  <Select
    label="Select Order"
    onChange={[Function]}
    options={Array []}
  />
  <div
    className="alignright"
    style={
      Object {
        "padding": "20px 0",
      }
    }
  >
    <Button
      isPrimary={true}
      onClick={[Function]}
    >
      Okay
    </Button>
    <Button
      onClick={[Function]}
    >
      Cancel
    </Button>
  </div>
</Modal>
`;

exports[`TinyMCE Controls Modal modal is opened and view is non-circle 1`] = `
<Modal
  className="component_web_stories_mce_model"
  closeButtonLabel="Close"
  onRequestClose={[Function]}
  shouldCloseOnClickOutside={false}
  title="Web Stories"
>
  <Select
    label="Select View Type"
    onChange={[Function]}
    options={Array []}
  />
  <TinyMCEToggle
    field="title"
  />
  <TinyMCEToggle
    field="excerpt"
  />
  <TinyMCEToggle
    field="author"
  />
  <TinyMCEToggle
    field="date"
  />
  <TinyMCEToggle
    field="image_align"
  />
  <TinyMCEToggle
    field="archive_link"
  />
  <Range
    label="Number of Stories"
    max={20}
    min={1}
    onChange={[Function]}
  />
  <Range
    label="Number of Columns"
    max={4}
    min={1}
    onChange={[Function]}
  />
  <Select
    label="Select Order"
    onChange={[Function]}
    options={Array []}
  />
  <div
    className="alignright"
    style={
      Object {
        "padding": "20px 0",
      }
    }
  >
    <Button
      isPrimary={true}
      onClick={[Function]}
    >
      Okay
    </Button>
    <Button
      onClick={[Function]}
    >
      Cancel
    </Button>
  </div>
</Modal>
`;
